--- a/Smyt/Info.plist
+++ b/Smyt/Info.plist
@@ -34,7 +34,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>161117</string>
+	<string>161128</string>
 	<key>FacebookAppID</key>
 	<string>471720453036672</string>
 	<key>FacebookDisplayName</key>
@@ -80,9 +80,11 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>SMYT need to use camera to take videos</string>
+	<string>SMYT needs to use Camera to take videos</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>SMYT needs to use microphone to take videos</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>SMYT need to use camera to upload photos</string>
+	<string>SMYT needs to use Photo to take videos</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
